# Lp3-Engine

./: .cil.conf  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  changelog.md  ci.py  conanfile.py  lp3-core-ci.py  package.txt  requirements.txt
.tcdd/: CMakeLists.txt  README.md  ci.py  deps.txt  travis.yml
conan/: CMakeLists.txt  conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py
core/: CMakeLists.txt  README.md  README.mdpp  requirements.txt
core/demos/: ExitDemo.cpp  LogDemo.cpp  Lp3TailLog.cpp  MainDemo.cpp  MultipleWindows.cpp  Sdl2Simple.cpp
core/include/lp3/: assert.hpp  casts.hpp  core.hpp  le.hpp  log.hpp  main.hpp  sdl.hpp
core/include/lp3/core/: Exception.hpp  exit.hpp  utils.hpp
core/resources/: story.txt
core/src/: ErrOut.cpp  ErrOut.hpp  WCharToCharConverter.cpp  assert.cpp  core_py.cpp  exception.cpp  exit.cpp  gl.cpp  log.cpp  media.cpp  sdl.cpp  utils.cpp
core/src/js/: platform.cpp
core/src/pc/: platform.cpp
core/tests/: assert_tests.cpp  media_tests.cpp
demos/: AssertDemo.cpp  LogDemo.cpp  MainDemo.cpp  MicroMainDemo.cpp  MultipleWindows.cpp  Sdl2Simple.cpp  Sdl2WithGlew.cpp
docs/: Pipfile  README.md  core.mrst  cpp_rst.py  gfx.mrst  gl.mrst  imgui.mrst  index.mdpp  input.mrst  make.py  mix.mrst  readme.mrst
docs/source/: conf.py  core.mrst  gfx.mrst  gl.mrst  imgui.mrst  index.mrst  index.rst  input.mrst  mix.mrst  readme.mrst  ref_lp3_core.mrst  ref_lp3_sdl.mrst  sims.mrst
gfx/: .travis.yml  CMakeLists.txt  README.md  ci.py  frontdoor.py
gfx/.tcdd/: README.md  deps.txt
gfx/demos/: CPaperDemo.cpp  DrawTiles.cpp  MultipleWindows.cpp  SimpleGfx.cpp  TextureDemo.cpp  font_saver.cpp  show_font.cpp
gfx/include/lp3/: gfx.hpp
gfx/include/lp3/gfx/: CPaper.hpp  buffers.hpp  colors.hpp  config.hpp  elements.hpp  geometry2.hpp  management.hpp  matrices.hpp  programs.hpp  screen.hpp  text.hpp  tiles.hpp
gfx/include/lp3/gfx/nodes/: TPaper.hpp
gfx/include/lp3/gfx/programs/: ColoredTexture.hpp  SimpleTextured.hpp
gfx/src/: CPaper.cpp  buffers.cpp  management.cpp  matrices.cpp  screen.cpp  text.cpp  texture.cpp  tiles.cpp
gfx/src/nodes/: TPaper.cpp
gfx/src/programs/: ColoredTexture.cpp  SimpleTextured.cpp
gfx/standalone/: CMakeLists.txt
gl/: CMakeLists.txt  README.md  README.mdpp  ci.py  requirements.txt
gl/.tcdd/: README.md  deps.txt
gl/demos/: glDemo.cpp
gl/include/lp3/: gl.hpp
gl/include/lp3/gl/: config.hpp  extras.hpp  gles2.h
gl/src/: extras.cpp  gles2._orig_c  gles2.cpp
gl/standalone/: CMakeLists.txt
imgui/: CMakeLists.txt  README.md
imgui/include/lp3/: imgui.hpp
imgui/include/lp3/imgui/: config.hpp
imgui/src/: ImGuiApp.cpp  demo.cpp  imgui_draw_wrapper.cpp
include/lp3/: MicroMain.hpp  assert.hpp  casts.hpp  core.hpp  gl.hpp  le.hpp  log.hpp  main.hpp  platform.hpp  sdl.hpp  test.hpp  test_asserts.hpp
include/lp3/core/: Clock.hpp  Exception.hpp  config.hpp  coroutine.hpp  media.hpp  new_type.hpp  utils.hpp
input/: CMakeLists.txt  README.md
input/demos/: pokey.cpp  view_controls.cpp
input/include/lp3/: input.hpp
input/include/lp3/input/: config.hpp
input/src/: Device.hpp  DeviceSource.cpp  DeviceSource.hpp  SdlGameController.cpp  SdlJoystick.cpp  SdlKeyboard.cpp  input.cpp
mix/: CMakeLists.txt  README.md
mix/demos/: mix_demo.cpp
mix/include/lp3/: mix.hpp
mix/include/lp3/mix/: config.hpp
mix/src/: mix.cpp
sims/: CMakeLists.txt  README.md  README.mdpp  ci.py
sims/.tcdd/: README.md  deps.txt
sims/demos/: TimersDemo.cpp
sims/include/lp3/: sims.hpp
sims/include/lp3/sims/: Clock.hpp  EventSimulator.hpp  config.hpp  coroutine.hpp  dispatcher.hpp  qroutines.hpp
sims/src/: Clock.cpp  EventSimulator.cpp  dispatcher.cpp  qroutines.cpp
sims/standalone/: CMakeLists.txt
sims/tests/: EventSimulatorTests.cpp  coroutine_tests.cpp  dispatcher_tests.cpp  qroutines_tests.cpp  tests-main.cpp
src/: Clock.cpp  ErrOut.cpp  WCharToCharConverter.cpp  assert.cpp  gl.cpp  log.cpp  media.cpp  pch.hpp  platform.ipp  sdl.cpp  test_asserts.cpp  utils.cpp
src/js/: platform.cpp
src/null/: platform.cpp
src/pc/: platform.cpp
src/windows/: Clock.cpp  platform.cpp
standalone/: CMakeLists.txt
standalone/media/Engine/Resources/: story.txt
test_package/: CMakeLists.txt  conanfile.py
tests/: assert_tests.cpp  coroutine_tests.cpp  media_tests.cpp  new_type_tests.cpp
